2006-10-13  Alexey Gladkov <legion@altlinux.org>

	* Check return code for getgroups and fwrite.

2006-10-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed inverted char class matching.

2006-05-23  Alexey Gladkov <legion@altlinux.org>

	* Added --with-libedit option to configure.

2006-03-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed useless parsebackquote flag.
	* Use alloca to get rid of setjmp in parse.c.
	* Only use signed char for syntax arrays.

2006-01-12  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed eval exit status with empty arguments.

2005-11-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Release 0.5.3.

2005-11-14  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix \c spillage across echo commands.

2005-11-13  Herbert Xu <herbert@gondor.apana.org.au>

	* Remove unnecessary truncation in _STPUTC.
	* Always call conv_escape_str in echocmd.

2005-11-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Use mktemp if tempfile is not available.

2005-10-30  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed support for disabling job control.

2005-10-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Updated BSD licence to 3-clause version per NetBSD.
	* Updated copyright.
	* Removed CVS IDs and inclusion of sys/cdefs.h.
	* Removed use of __P from error.h.
	* Use bsd_signal if it exists and signal does not.
	* Stop using sysexits.h in commandcmd.
	* Use stat if stat64 does not exist.
	* Added default implementation of bsearch.
	* Added getpwhome as a wrapper for getpwnam.
	* Fixed gcc 4.0 compilation problems.
	* Added missing system.h inclusion for mempcpy.
	* Added default implementation of strsignal.
	* Added default implementation of killpg.
	* Disable ulimit if there is no getrlimit.
	* Disable histcmd completely when SMALL is defined.
	* Added default definition for SSIZE_MAX.
	* Removed standalone/csh support from printf.
	* Added dummy strtod implementation.
	* Removed standalone/csh support from test.