@@ -1,3 +1,7 @@
+2006-10-22  Gerrit Pape <pape@smarden.org>
+
+	* Fixed command -v segmentation fault.
+
 2006-10-13  Alexey Gladkov <legion@altlinux.org>
 
 	* Check return code for getgroups and fwrite.
